ToDoList video 3th Monday! 4th video by Dimych! Star. new

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,11 +8,15 @@
   margin-right: 50px;
 }
 
+.input {
+
+}
+
 .error {
   border: red 1px solid;
 }
 
-.error-message {
+.error_message {
   color: red;
 }
 
